# battleships

./: Cargo.toml  LICENSE  README.md
battleships/src/: board.rs
bslib/: Cargo.toml
bslib/src/: game.rs  lib.rs  player.rs  tcpProtocol.rs  tcp_protocol.rs
bslib/src/player/: board.rs
bslib/src/tcp_protocol/: error.rs
bslibrary/: Cargo.toml
bslibrary/src/: board.rs  lib.rs  player.rs
bslibrary/src/player/: board.rs
client/: Cargo.toml
client/src/: client_player.rs  main.rs
client/src/client_player/: client_board.rs  error.rs
client/src/client_player/client_board/: error.rs
server/: Cargo.toml
server/src/: board.rs  error.rs  game_manager.rs  handlers.rs  main.rs
server/src/game_manager/: server_game.rs  server_player.rs
server/src/handlers/: error.rs
