[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
bslib = { path = "../bslib" }
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "io-util", "net", "macros"] }

