[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.14.0"
dotenv = "0.15.0"
serde = "1.0.197"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "io-util", "net", "macros"] }
bslib = { path = "../bslib" }
